# rag_docu_example

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
apps/pipeline/: .env.example  package.json  pyproject.toml
apps/pipeline/scripts/: verify_attachment_text.py
apps/pipeline/src/: index.ts
apps/pipeline/src/bronze/: index.ts
apps/pipeline/src/gold/: index.ts
apps/pipeline/src/pipeline/: __main__.py
apps/pipeline/src/pipeline/bronze/: __init__.py  db.py  load.py  manifest.py  storage.py
apps/pipeline/src/pipeline/gold/: __init__.py
apps/pipeline/src/pipeline/silver/: __init__.py  build.py  db.py  html_clean.py  link_parser.py  transform.py
apps/pipeline/src/pipeline/silver/attachment_text/: __init__.py  db.py  models.py  runner.py
apps/pipeline/src/pipeline/silver/attachment_text/extractors/: __init__.py  csv_extractor.py  docx.py  pdf.py
apps/pipeline/src/silver/: index.ts
apps/pipeline/tests/: conftest.py  test_extractors.py
apps/pipeline/tests/fixtures/: _generate.py  sample.csv  sample.docx
docs/prds/: 01-bronze-ingest.md  02-silver-transform.md  03-attachment-text-extraction.md  04-gold-embeddings.md
