[project]
name = "rag-pipeline"
version = "0.0.0"
description = "Bronze/silver/gold RAG ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
  "rag-shared",
  "supabase>=2.10.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
]

[project.scripts]
pipeline = "pipeline.__main__:main"

[tool.uv.sources]
rag-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]
